<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isShowNoAlarmText"
            type="Boolean" />

        <variable
            name="viewModel"
            type="com.vladbakalo.location_alarm.ui.alarm_create.LocationAlarmCreateViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/locationAlarmCreateRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/list_item_margin"
            tools:context=".ui.alarm_create.LocationAlarmCreateFragment">

            <com.vladbakalo.location_alarm.view.MainEditText
                android:id="@+id/locationAlarmCreateEtNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_list_item_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:mainEditTextHint="@string/name"
                app:mainEditTextType="name"
                app:mainEditTextValue="@={viewModel.name}"/>

            <com.vladbakalo.location_alarm.view.MainEditText
                android:id="@+id/locationAlarmCreateEtAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateEtNameText"
                app:mainEditTextHint="@string/address"
                app:mainEditTextType="address" />

            <LinearLayout
                android:id="@+id/locationAlarmCreateLlCoordBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateEtAddressText">

                <com.vladbakalo.location_alarm.view.MainEditText
                    android:id="@+id/locationAlarmCreateEtLatitudeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/half_list_item_margin"
                    android:layout_weight="1"
                    app:mainEditTextHint="@string/latitude"
                    app:mainEditTextType="latitude" />

                <com.vladbakalo.location_alarm.view.MainEditText
                    android:id="@+id/locationAlarmCreateEtLongitudeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/half_list_item_margin"
                    android:layout_weight="1"
                    app:mainEditTextHint="@string/longitude"
                    app:mainEditTextType="longitude" />
            </LinearLayout>

            <com.vladbakalo.location_alarm.view.MainEditText
                android:id="@+id/locationAlarmCreateEtNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateLlCoordBlock"
                app:mainEditTextHint="@string/note"
                app:mainEditTextType="name" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/locationAlarmCreateEtNoteText">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_alarm_block"
                    android:layout_marginTop="@dimen/half_list_item_margin"
                    android:minHeight="200dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_alarms"
                        android:visibility="@{isShowNoAlarmText ? View.VISIBLE : View.GONE}"
                        style="@style/LocationAlarm.Text.EmptyText" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:visibility="@{isShowNoAlarmText ? View.GONE : View.VISIBLE}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_alarm" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/half_list_item_margin"
                    android:text="@string/alarms"
                    style="@style/LocationAlarm.TextInputLayoutTittle" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
