<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        tools:context=".ui.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/login_launcher_icon_height_width"
                    android:layout_height="@dimen/login_launcher_icon_height_width"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_launcher_foreground"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/registration"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/LocationAlarm.Login.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authRegisterEtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/LocationAlarm.Login.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authRegisterEtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/LocationAlarm.Login.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authRegisterEtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/LocationAlarm.Login.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_re"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authRegisterEtRePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/authRegisterBtnRegister"
                    style="@style/LocationAlarm.Login.LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>